--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
     <div class="h-20"></div>
 
     <!-- Header Section -->
-    <header class="text-center mb-10 fade-in delay-1">
-      <h1 class="text-4xl sm:text-5xl font-bold text-teal-700">Okoye Annabel Adanna</h1>
-      <p class="mt-2 text-lg sm:text-xl text-gray-600">Registered Nurse | Specialty: Midwifery</p>
-      <div class="mt-4 flex justify-center items-center space-x-6 text-sm">
-        <a href="mailto:okoyeannabel17@gmail.com" class="text-teal-700 font-medium hover:underline">okoyeannabel17@gmail.com</a>
-        <a href="https://www.linkedin.com/in/annabel-okoye-818577299" target="_blank" rel="noopener noreferrer" class="text-teal-700 font-medium hover:underline">LinkedIn Profile</a>
-      </div>
-
-      <!-- Resume Download Button -->
-      <div class="mt-4">
-        <a href="/Okoye_Annabel_Adanna_Resume.pdf" download class="inline-block bg-teal-600 text-white px-5 py-2 rounded-lg shadow hover:bg-teal-700 text-sm lift no-print">
-          Download Resume (PDF)
-        </a>
+    <header class="flex flex-col sm:flex-row items-center sm:items-start text-center sm:text-left mb-10 fade-in delay-1">
+      <!-- Profile Picture -->
+      <img src="headshot.jpeg" alt="Okoye Annabel Adanna" class="w-32 h-32 rounded-full shadow-md object-cover mb-4 sm:mb-0 sm:mr-8 flex-shrink-0">
+      <!-- Text Content -->
+      <div>
+        <h1 class="text-4xl sm:text-5xl font-bold text-teal-700">Okoye Annabel Adanna</h1>
+        <p class="mt-2 text-lg sm:text-xl text-gray-600">Registered Nurse | Specialty: Midwifery</p>
+        <div class="mt-4 flex justify-center sm:justify-start items-center space-x-6 text-sm">
+          <a href="mailto:okoyeannabel17@gmail.com" class="text-teal-700 font-medium hover:underline">okoyeannabel17@gmail.com</a>
+          <a href="https://www.linkedin.com/in/annabel-okoye-818577299" target="_blank" rel="noopener noreferrer" class="text-teal-700 font-medium hover:underline">LinkedIn Profile</a>
+        </div>
+        <!-- Resume Download Button -->
+        <div class="mt-4">
+          <a href="/Okoye_Annabel_Adanna_Resume.pdf" download class="inline-block bg-teal-600 text-white px-5 py-2 rounded-lg shadow hover:bg-teal-700 text-sm lift no-print">Download Resume (PDF)</a>
+        </div>
       </div>
     </header>
 
@@ -218,12 +220,21 @@
     <!-- Contact / Footer -->
     <section id="contact" class="mt-8 bg-white p-6 rounded-xl shadow-sm fade-in delay-2">
       <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-      <form action="https://formsubmit.co/okoyeannabel17@gmail.com" method="POST" class="grid md:grid-cols-2 gap-4">
-        <input required name="name" placeholder="Full Name" class="border px-4 py-3 rounded-lg" />
-        <input required name="email" type="email" placeholder="Email Address" class="border px-4 py-3 rounded-lg" />
-        <textarea required name="message" placeholder="Your Message" class="border px-4 py-3 rounded-lg md:col-span-2 h-32"></textarea>
-        <button class="bg-teal-600 text-white py-3 rounded-lg md:col-span-2 hover:bg-teal-700 lift">Send Message</button>
-      </form>
+      <p class="text-gray-600 mb-6">Feel free to reach out. I'm always open to connecting with other professionals.</p>
+      <div class="flex justify-center items-center space-x-6">
+        <!-- Email Icon -->
+        <a href="mailto:okoyeannabel17@gmail.com" class="text-gray-500 hover:text-teal-600 transition lift" aria-label="Email">
+          <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
+        </a>
+        <!-- WhatsApp Icon -->
+        <a href="https://wa.me/message/OMYYGIP2CEP2G1" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-teal-600 transition lift" aria-label="WhatsApp">
+          <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01s-.521.074-.792.372c-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.626.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.289.173-1.414z"></path></svg>
+        </a>
+        <!-- LinkedIn Icon -->
+        <a href="https://www.linkedin.com/in/annabel-okoye-818577299" target="_blank" rel="noopener noreferrer" class="text-gray-500 hover:text-teal-600 transition lift" aria-label="LinkedIn">
+          <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
+        </a>
+      </div>
     </section>
 
     <footer class="text-center mt-8 py-6 border-t text-sm text-gray-500 no-print">
